Completed All the features of admin dashboard section

--- a/add-boarding.html
+++ b/add-boarding.html
@@ -23,6 +23,11 @@
                 <form id="addListingForm">
                     <div class="form-grid">
                         <div class="form-group">
+                      <label for="hostelImage">Hostel Image</label>
+                      <input type="file" id="hostelImage" accept="image/*">
+                     <small>Upload a clear photo of the room.</small>
+</div>
+                        <div class="form-group">
                             <label for="listingTitle">Listing Title</label>
                             <input type="text" id="listingTitle" placeholder="Comfortable Single Room Near University">
                         </div>
